# nonicle

./: .codespellignore  .commitlintrc.json.license  .gitignore  .justfile  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierrc.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yaml
.github/workflows/: build-and-test.yaml  continuous-integration.yaml  pre-commit.yaml  security-audit.yaml
src/: lib.rs  std_tests.rs
