# SPDX-FileCopyrightText: The nonicle authors
# SPDX-License-Identifier: MPL-2.0

[package]
name = "nonicle"
description = "Tools for type-safe, canonical data representations."
keywords = ["semantic", "canonical"]
version = "0.0.0"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/uklotzde/nonicle"
categories = ["no-std", "rust-patterns"]
edition = "2021"

[features]
default = ["std"]
std = []
